# pysimcache

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ruff-lint.yml  tests.yml  unit-tests.yml
app/: cli.py
app/cache/: __init__.py  cache_block.py  cache_mapeamento.py  cache_mapping.py  cache_policy.py  cache_set.py
app/file/: __init__.py  file.py
app/replacement_policy/: __init__.py  fifo_replacement_policy.py  lru_replacement_policy.py  random_replacement_policy.py  replacement_policy.py  replacement_policy_types.py
app/tools/: __init__.py  output.py  output_type.py
file/: __init__.py  file.py
tests/: test_file.py
tests/cache/: test_cache_mapping.py
tests/file/: test_file.py
tests/replacement_policy/: test_fifo_replacement_policy.py  test_lru_replacement_policy.py  test_random_replacement_policy.py
