[tool.poetry]
name = "pysimcache"
version = "0.1.0"
description = ""
authors = ["Diaszano <61257292+Diaszano@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.scripts]
cache_simulator = "app.cli:main"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.5"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.13.0"
ruff = "^0.6.3"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
pre_test = "task check"
test = "python -m unittest discover -v -s tests"
check = "ruff check"
format = "ruff format && ruff check --fix"

[tool.ruff]
line-length = 80
target-version = "py312"

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "A",
    "ARG",
    "B",
    "C",
    "C4",
    "C90",
    "COM",
    "DTZ",
    "E",
    "F",
    "FA",
    "FURB",
    "G",
    "I",
    "INP",
    "LOG",
    "N",
    "PERF",
    "PIE",
    "PL",
    "PTH",
    "PYI",
    "RET",
    "R",
    "RUF",
    "SIM",
    "T20",
    "TCH",
    "TID",
    "W",
    "YTT"
]
ignore = [
    "COM812",
    "PLR0913",
    "W191"
]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true
